[tool.poetry]
name = "auton-survival"
version = "0.1.0"
description = ""
authors = ["Chirag Nagpal <chiragn@cs.cmu.edu>"]
readme = "README.md"
packages = [{include = "auton_survival"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
torchvision = "^0.21.0"
scikit-survival = "^0.24.0"
lifelines = "^0.30.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "master"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "build", "style"]

[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"
